--- a/fruitable/web/templates/checkout.html
+++ b/fruitable/web/templates/checkout.html
@@ -25,6 +25,26 @@
 
         <!-- Checkout Page Start -->
         <div class="container-fluid py-5">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert 
+                        {% if message.tags == 'success' %}
+                            alert-success
+                        {% elif message.tags == 'error' %}
+                            alert-danger
+                        {% elif message.tags == 'warning' %}
+                            alert-warning
+                        {% else %}
+                            alert-info
+                        {% endif %}
+                        alert-dismissible fade show" role="alert">
+                        
+                        <strong>{{ message }}</strong>
+                        
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endfor %}
+            {% endif %}
             <div class="container py-5">
                 <h1 class="mb-4">Billing details</h1>
                 <form method="POST" action="{% url 'checkout' %}" id="checkout-form">
@@ -35,39 +55,36 @@
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">First Name<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <input type="text" class="form-control" name="first_name" required>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <div class="form-item w-100">
                                         <label class="form-label my-3">Last Name<sup>*</sup></label>
-                                        <input type="text" class="form-control">
+                                        <input type="text" class="form-control" name="last_name" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Address <sup>*</sup></label>
-                                <input type="text" class="form-control" placeholder="House Number Street Name">
+                                <input type="text" class="form-control" name="address" placeholder="House Number Street Name" required>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Town/City<sup>*</sup></label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" name="city" required>
                             </div>
-                            <div class="form-item">
-                                <label class="form-label my-3">Country<sup>*</sup></label>
-                                <input type="text" class="form-control">
-                            </div>
+                            
                             <div class="form-item">
                                 <label class="form-label my-3">Postcode/Zip<sup>*</sup></label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" name="postcode" required>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Mobile<sup>*</sup></label>
-                                <input type="tel" class="form-control">
+                                <input type="tel" class="form-control" name="mobile" required>
                             </div>
                             <div class="form-item">
                                 <label class="form-label my-3">Email Address<sup>*</sup></label>
-                                <input type="email" class="form-control">
+                                <input type="email" class="form-control" name="email" required>
                             </div>                            
                             <div class="form-item">
                                 <label class="form-label my-3">Order Description</label>
@@ -180,7 +197,7 @@
                             </div> -->
                             
                             <div class="row g-4 text-center align-items-center justify-content-center pt-4">
-                                <a href="" class="btn border-secondary py-3 px-4 text-uppercase w-100 text-primary">Place Order</a>
+                                <button type="submit" class="btn border-secondary py-3 px-4 text-uppercase w-100 text-primary">Place Order</button>
                             </div>
                         </div>
                     </div>
